Fixes user menu 'z-index' param when console is maximized

--- a/src/main/webapp/css/ideas.css
+++ b/src/main/webapp/css/ideas.css
@@ -777,7 +777,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
     height: 60px;
     width: 100%;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    z-index: 7;
+    z-index: 12;
     /* Maximization transition*/
     -webkit-transition: all 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
     -moz-transition: all 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
